Update messaging connectors for core API (#10734)